--- a/cruds/node_prisma/package.json
+++ b/cruds/node_prisma/package.json
@@ -20,6 +20,10 @@
     },
     "dependencies": {
         "@prisma/client": "^5.17.0",
-        "express": "^4.19.2"
+        "@types/bcrypt": "^5.0.2",
+        "bcrypt": "^5.1.1",
+        "express": "^4.19.2",
+        "http-status-codes": "^2.3.0",
+        "jsonwebtoken": "^9.0.2"
     }
 }
