--- a/cruds/node_prisma/package.json
+++ b/cruds/node_prisma/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "@types/express": "^4.17.21",
         "@types/node": "^20.14.11",
+        "@types/bcrypt": "^5.0.2",
+        "@types/jsonwebtoken": "^9.0.6",
         "dotenv": "^16.4.5",
         "nodemon": "^3.1.4",
         "prisma": "^5.17.0",
@@ -20,7 +22,6 @@
     },
     "dependencies": {
         "@prisma/client": "^5.17.0",
-        "@types/bcrypt": "^5.0.2",
         "bcrypt": "^5.1.1",
         "express": "^4.19.2",
         "http-status-codes": "^2.3.0",
