--- a/cruds/node_prisma/package.json
+++ b/cruds/node_prisma/package.json
@@ -2,7 +2,7 @@
     "name": "todo-backend",
     "version": "1.0.0",
     "description": "todolist using Express,Prisma e MySql",
-    "main": "index.ts",
+    "main": "app.ts",
     "scripts": {
         "dev": "npx nodemon",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,10 +10,11 @@
     "author": "ArtroxGabriel",
     "license": "ISC",
     "devDependencies": {
-        "@types/express": "^4.17.21",
-        "@types/node": "^20.14.11",
         "@types/bcrypt": "^5.0.2",
+        "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
+        "@types/node": "^20.14.11",
+        "@types/winston": "^2.4.4",
         "dotenv": "^16.4.5",
         "nodemon": "^3.1.4",
         "prisma": "^5.17.0",
@@ -25,6 +26,7 @@
         "bcrypt": "^5.1.1",
         "express": "^4.19.2",
         "http-status-codes": "^2.3.0",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "winston": "^3.13.1"
     }
 }
