--- a/cruds/node_prisma/package.json
+++ b/cruds/node_prisma/package.json
@@ -2,9 +2,11 @@
   "name": "todo-backend",
   "version": "1.0.0",
   "description": "todolist using Express,Prisma e MySql",
-  "main": "app.ts",
+  "main": "build/app.js",
   "scripts": {
-    "dev": "npx nodemon",
+    "start": "node ./build/app.js",
+    "build": "tsc",
+    "dev": "nodemon",
     "test": "jest"
   },
   "author": "ArtroxGabriel",
@@ -16,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.11",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/winston": "^2.4.4",
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
@@ -32,6 +35,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.1"
   }
 }
