--- a/cruds/node_prisma/tsconfig.json
+++ b/cruds/node_prisma/tsconfig.json
@@ -1,11 +1,19 @@
 {
   "compilerOptions": {
+    "outDir": "./build",
+    "rootDir": "./src",
     "target": "es2016",
-    "module": "commonjs",
-    "esModuleInterop": true,
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "strict": true,
-    "skipLibCheck": true
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "resolvePackageJsonImports": true
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "**/*.test.ts"]
 }
